# kaba

./: .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  CMakePresets.json  Kaba.sln  Kaba.vcxproj  Kaba.vcxproj.filters  README.md  kaba.sln  kaba.vcxproj  kaba.vcxproj.filters  meson.build  vcpkg.json  xmake.conf
.github/workflows/: cmake-multi-platform.yml
Data/: config.txt  michisoft-kaba.desktop
Tests/Compiler-Test-Scripts/: asm10.kaba  asm11.kaba  asm13.kaba  asm15.kaba  asm16.kaba  asm17.kaba  asm18.kaba  asm20.kaba  asm23.kaba  asm27.kaba  asm30.kaba  asm31.kaba  asm39.kaba  asm40.kaba  asm41.kaba  asm42.kaba  asm44.kaba  asm6.kaba  asm7.kaba  c.kaba  class.kaba  f.kaba  float.kaba  g.kaba  include.kaba  stringx_c.kaba  test.kaba  test2.kaba  x.kaba  y.kaba  y2.kaba  zz.kaba  zzz - evil compiler.kaba
Tests/Optimization/: vector-constructor.kaba
Tests/Regression/: abstract-array-builder.kaba  abstract-array-builder.reg  abstract-list-classify.kaba  abstract-list-classify.reg  any-as-array.kaba  any-as-array.reg  any-drop.kaba  any-drop.reg  any-map.kaba  any-map.reg  any-ref.kaba  any-ref.reg  any-unwrap.kaba  any-unwrap.reg  any.kaba  array_builder.kaba  array_float.kaba  array_float.reg  array_pointer.kaba  array_ref_assign.kaba  asm1.kaba  asm2.kaba  asm3.kaba  bug-array-builder-sub-block.kaba  bug-array-builder-sub-block.reg  bug-array-constructor.kaba  bug-array-constructor.reg  bug-char-to-int.kaba  bug-constructor-function.kaba  bug-constructor-function.reg  bug-constructor-param.kaba  bug-set-builder-cp-block.kaba  call-basic.kaba  call-member-virtual.kaba  call-member-virtual.reg  call-member-virtual2.kaba  call-member.kaba  call-with-cast.kaba  class-pointer.kaba  class-use-indirect.kaba  (+200 more)
Tests/basic/: 01-call-int-param.kaba  02-call-string-param.kaba  03-string.kaba  04-local.kaba  05-global.kaba  06-user-func.kaba  06-user-func.reg  07-return.kaba  08-i2s.kaba  09-float.kaba  10-virtual.kaba  10-virtual.reg  11-float-param.kaba  12-float-calc.kaba  regression.sh
Tests/basic/x/: 1.kaba  10.kaba  11.kaba  14.kaba  15.kaba  16.kaba  17.kaba  18.kaba  19.kaba  20.kaba  21.kaba  22.kaba  3.kaba  4.kaba  6.kaba  7.kaba  8.kaba
doc/: auto-types  call  concrete  design  how-to-build.md  info  plans  plans-future
doc/future ideas/: memory-safety  optional-types  out-parameters  packages  plans-future  templates
doc/future ideas/done/: enum-class  new-variable-declaration
doc/info/: call  lambda-captures
doc/language/: arrays.md  async.md  basics.md  classes.md  dicts.md  enums.md  error.md  functions.md  generics.md  language.md  modules.md  optionals.md  pipes.md  pointers.md  strings.md
doc/plans/: call-bind  constructors  for-drop  functional  generics  interfaces  macros  memory-safety  partial-evaluation  pipes  plans  pointers  speed
doc/plans/done/: out-instead-of-silent-pointer
modules/: build-all.sh  install.sh
modules/glfw/: CMakeLists.txt  glfw.kaba  install.sh  xmake.conf
modules/glfw/src/: main.cpp
modules/mongo/: CMakeLists.txt  mongo.kaba  xmake.conf
modules/mongo/src/: main.cpp
modules/ncurses/: CMakeLists.txt  ncurses.kaba  xmake.conf
modules/ncurses/src/: main.cpp
modules/ncurses/src/lib/base/: strings.cpp  variant.h
modules/sqlite/: CMakeLists.txt  sqlite.kaba  xmake.conf
modules/sqlite/src/: KabaExporter.h  main.cpp
modules/sqlite/src/lib/base/: map.h  strings.h
modules/terminal/: CMakeLists.txt  terminal.kaba  xmake.conf
modules/terminal/src/: main.cpp
modules/zlib/: CMakeLists.txt  xmake.conf  zlib.kaba
modules/zlib/src/: main.cpp
modules/zlib/src/lib/: config.h
src/: Makefile  Makefile-minimal  Makefile-no-vulkan  Makefile-vulkan  main.cpp  xmake.conf
src/Helper/: CLIParser.cpp  CLIParser.h
src/helper/: CommandLineParser.cpp  CommandLineParser.h  ErrorHandler.cpp  ErrorHandler.h  elf.cpp  elf.h  experiments.cpp  experiments.h  symbols.cpp  symbols.h
src/lib/: 00_config.h  config.h
src/lib/algebra/: _kaba_export.cpp  _kaba_export.h  algebra.h  algebra.mk  crypto.cpp  crypto.h  vli.cpp  vli.h
src/lib/any/: any.cpp  any.h  conversion.cpp  conversion.h
src/lib/base/: algo.h  array.h  base.h  base.mk  callable.h  error.h  future.h  iter.h  macros.h  map.h  optional.h  pointer.h  range.h  set.h  (+7 more)
static/: michisoft-kaba.desktop  michisoft-kaba.xml
static/.svn/: all-wcprops  entries
test/basic/: 01-call-int-param.reg  03-string.kaba  03-string.reg  04-local.kaba  05-global.kaba  06-user-func.kaba  09-float.kaba  11-float-param.kaba  11-float-param.reg  12-float-calc.reg  arm  regression.sh  todo
test/compiler-test-scripts/: a.kaba  a0.kaba  aa.kaba  asm12.kaba  asm14.kaba  asm19.kaba  asm2.kaba  asm21.kaba  asm22.kaba  asm24.kaba  asm25.kaba  asm26.kaba  asm28.kaba  asm29.kaba  asm3.kaba  asm31.kaba  asm32.kaba  asm33.kaba  asm34.kaba  asm35.kaba  asm36.kaba  asm37.kaba  asm38.kaba  asm39.kaba  asm4.kaba  asm43.kaba  asm44.kaba  asm45.kaba  asm46.kaba  asm5.kaba  asm8.kaba  asm9.kaba  b.kaba  bez_alt.kaba  class2.kaba  d.kaba  e.kaba  h.kaba  i.kaba  stringx_a.kaba  (+3 more)
test/modules/: gl-test.kaba  glfw-test.kaba  hui-test.kaba  mongo-test.kaba  y-client.kaba
test/optimization/: vector-constructor.kaba
test/regression/: abstract-array-builder.kaba  abstract-function.kaba  abstract-function.reg  abstract-list-classify.kaba  any-map.kaba  any-unwrap.kaba  any.kaba  any.reg  array_builder.kaba  array_float.kaba  array_ref_assign.kaba  bug-array-builder-sub-block.kaba  bug-array-constructor.kaba  bug-array-constructor.reg  bug-char-to-int.kaba  bug-constructor-param.reg  call-member-virtual.kaba  call-member-virtual2.reg  call-member.kaba  call-member.reg  call-with-cast.kaba  cast-as.kaba  cast-as.reg  class-pointer.kaba  class-use-indirect.kaba  class1.kaba  class2.kaba  class2.reg  class3.kaba  class4.kaba  class5.kaba  class7.kaba  class_b1.kaba  class_b1.reg  color1.kaba  const-with-constructor.kaba  const-with-constructor.reg  constructor-auto-full.kaba  constructor-auto-select.kaba  constructor-function.kaba  (+135 more)
tools/: create-env.sh  initialize-package-manager.sh
(+845 files in other folders)
